Updated portfolio button CSS.

--- a/home.html
+++ b/home.html
@@ -332,7 +332,7 @@
                     </section>
                     <section id="portfolio-grid" class="clear">
                         <div class="portfolioBase"></div>
-                        <div class="portfolio-element element tools" id="portfolio-01.html">
+                        <div class="portfolio-element element tools backend" id="portfolio-01.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Matrix Calculator<span class="project-position">Tool Developer</span></span>
