Update PowerShell to Bash.

--- a/home.html
+++ b/home.html
@@ -186,7 +186,7 @@
                         <span class="tooltip-bottom-triangle skill-hover"></span>
                     </div>
                     <div class="skill-element hideme dontHide">
-                        <div class="skill-icon"><div class="skill-title">PowerShell</div></div>
+                        <div class="skill-icon"><div class="skill-title">Bash</div></div>
                         <div class="tooltip skill-hover">
                             <div class="details">
                                 <ul class="feature-list">
