Remove unused class and stat update.

--- a/home.html
+++ b/home.html
@@ -217,7 +217,7 @@
                     </div>
                     <div class="fact-element hideme dontHide">
                         <div class="fact-icon second-stat"></div>
-                        <div class="milestone-counter" data-perc="335">
+                        <div class="milestone-counter" data-perc="340">
                             <span class="milestone-count highlight">0</span>
                             <div class="milestone-details">GitHub Contributions</div>
                         </div>
@@ -370,7 +370,7 @@
                         <div class="portfolio-element element hardware backend" id="portfolio-06.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt='img'>
                             <div>
-                                <span><span class="project-title hardware"></span>Fuel Cell Car<span class="project-position">Embedded Software Developer</span></span>
+                                <span><span class="project-title"></span>Fuel Cell Car<span class="project-position">Embedded Software Developer</span></span>
                             </div>
                         </div>
 
