Renamed project files.

--- a/home.html
+++ b/home.html
@@ -332,56 +332,56 @@
                     </section>
                     <section id="portfolio-grid" class="clear">
                         <div class="portfolioBase"></div>
-                        <div class="portfolio-element element tools backend" id="portfolio-01.html">
+                        <div class="portfolio-element element tools backend" id="project-01.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Matrix Calculator<span class="project-position">Tool Developer</span></span>
                             </div>
                         </div>
 
-                        <div class="portfolio-element element mobile" id="portfolio-02.html">
+                        <div class="portfolio-element element mobile" id="project-02.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-02.jpg" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Android Game<span class="project-position">Mobile Game Developer</span></span>
                             </div>
                         </div>
 
-                        <div class="portfolio-element element backend hardware" id="portfolio-03.html">
+                        <div class="portfolio-element element backend hardware" id="project-03.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-03.jpg" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Automated Teller Machine<span class="project-position">Embedded Software Developer</span></span>
                             </div>
                         </div>
 
-                        <div class="portfolio-element element web mobile" id="portfolio-04.html">
+                        <div class="portfolio-element element web mobile" id="project-04.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-04.jpg" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Portfolio Website<span class="project-position">Full Stack Web Developer</span></span>
                             </div>
                         </div>
 
-                        <div class="portfolio-element element tools backend" id="portfolio-05.html">
+                        <div class="portfolio-element element tools backend" id="project-05.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-05.png" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Balance Tracker<span class="project-position">Tool Developer</span></span>
                             </div>
                         </div>
 
-                        <div class="portfolio-element element hardware backend" id="portfolio-06.html">
+                        <div class="portfolio-element element hardware backend" id="project-06.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Fuel Cell Car<span class="project-position">Embedded Software Developer</span></span>
                             </div>
                         </div>
 
-                        <div class="portfolio-element element tools backend" id="portfolio-07.html">
+                        <div class="portfolio-element element tools backend" id="project-07.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-07.png" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Python Auto Clicker<span class="project-position">Tool Developer</span></span>
                             </div>
                         </div>
 
-                        <div class="portfolio-element element hardware" id="portfolio-08.html">
+                        <div class="portfolio-element element hardware" id="project-08.html">
                             <img class="portfolio-image" src="img/portfolio/thumb-08.jpg" alt='img'>
                             <div>
                                 <span><span class="project-title"></span>Electric Cars<span class="project-position">Hardware Design Engineer</span></span>
