Updated fragment identifiers.

--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
         <section id="home" class="clear">
             <div class="video-mask"></div>
             <a id="video-volume" onclick="$('#background-video').toggleVolume()"></a>
-            <a href="#anchor2"><div class="bouncing-arrow"></div></a>
+            <a href="#about"><div class="bouncing-arrow"></div></a>
 
             <!-- Video Background -->
             <a id="background-video" class="player" data-property="{videoURL:'kn-1D5z3-Cs',mute:true,showControls:false,showYTLogo:false,realfullscreen:false,gaTrack:false}"></a>
@@ -58,7 +58,7 @@
                 </ul>
                 <div class="spacer"></div>
                 <div class="second-title">Creativity starts with viewing the world differently. Take action & keep it simple.</div>
-                <a href="#anchor2"><div class="continue-button">Find out more<span></span></div></a>
+                <a href="#about"><div class="continue-button">Find out more<span></span></div></a>
             </div>
         </div>
         <header class="header">
@@ -71,25 +71,25 @@
                 <a class="jump-menu" title="Show navigation">Show navigation</a>
                 <ul>
                     <li class="current"><a href="#home">home</a></li>
-                    <li><a href="#anchor2">about</a></li>
-                    <li><a href="#anchor3">facts</a></li>
-                    <li><a href="#anchor4">experience</a></li>
-                    <li><a href="#anchor5">projects</a></li>
-                    <li><a href="#anchor6">contact</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#facts">facts</a></li>
+                    <li><a href="#experience">experience</a></li>
+                    <li><a href="#projects">projects</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
             <nav class="menu">
                 <ul id="nav">
                     <li class="current"><a href="#home">home</a></li>
-                    <li><a href="#anchor2">about</a></li>
-                    <li><a href="#anchor3">facts</a></li>
-                    <li><a href="#anchor4">experience</a></li>
-                    <li><a href="#anchor5">projects</a></li>
-                    <li><a href="#anchor6">contact</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#facts">facts</a></li>
+                    <li><a href="#experience">experience</a></li>
+                    <li><a href="#projects">projects</a></li>
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
         </header>
-        <article id="anchor2" class="content dark">
+        <article id="about" class="content dark">
             <header class="title one">My Skills</header>
             <div class="spacer"></div>
             <div class="title two">I take pride in my interdisciplinary approach in crafting beautiful, functional and engaging work that delights and delivers results.</div>
@@ -202,7 +202,7 @@
            </div>
         </article>
 
-        <article id="anchor3" class="content light">
+        <article id="facts" class="content light">
             <section class="full">
                 <div class="title-full-one">Enjoy Them</div>
                 <div class="title-full-two">Some Fun Facts</div>
@@ -249,7 +249,7 @@
             <div class="mobile-parallax-image hideme-slide2 dontHide"><img src="img/parallax/mobile-parallax-image.png" alt='img'></div>
         </article>
 
-        <article id="anchor4" class="content light">
+        <article id="experience" class="content light">
             <header class="title one">Work Experience</header>
             <div class="spacer"></div>
             <div class="title two">Check out where I've worked!</div>
@@ -309,7 +309,7 @@
             <div class="clear"></div>
         </article>
 
-        <article id="anchor5" class="content dark">
+        <article id="projects" class="content dark">
             <header class="title one">My Projects</header>
             <div class="spacer"></div>
             <div class="title two">Check out my following projects, I'm sure you'll love them!</div>
@@ -400,7 +400,7 @@
 
         <footer class="footer light">
             <div class="footer-container">
-                <div id="anchor6" class="title one">Contact</div>
+                <div id="contact" class="title one">Contact</div>
                 <div class="spacer"></div>
                 <div class="title two">I like to create things with fun, like-minded people.<br>Feel free to say hello!</div>
                 <div class="hideme dontHide">
