Added text to projects section to prompt users to click.

--- a/home.html
+++ b/home.html
@@ -312,7 +312,7 @@
         <article id="projects" class="content dark">
             <header class="title one">My Projects</header>
             <div class="spacer"></div>
-            <div class="title two">Check out my following projects, I'm sure you'll love them!</div>
+            <div class="title two">Check out my following projects, I'm sure you'll love them!<br>Click on a project to find out more!</div>
             <div id="portfolio" class="container">
                 <div class="section portfoliocontent">
                     <section id="options" class="clear">
