Minified jQuery.nav.js

--- a/home.html
+++ b/home.html
@@ -451,7 +451,7 @@
         <script src="js/home/jquery.sticky.js"></script>
         <script src="js/home/portfolio.js"></script>
         <script src="js/home/jquery.hoverdir.min.js"></script>
-        <script src="js/home/jquery.nav.js"></script>
+        <script src="js/home/jquery.nav.min.js"></script>
         <script src="js/home/jquery.isotope.min.js"></script>
         <script src="js/home/jquery.mb.YTPlayer.min.js"></script>
         <script src="js/home/jquery.validate.min.js"></script>
