Updated and minified jquery.sticky.js

--- a/home.html
+++ b/home.html
@@ -448,7 +448,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/home/main.js"></script>
         <script src="js/home/jquery.inview.min.js"></script>
-        <script src="js/home/jquery.sticky.js"></script>
+        <script src="js/home/jquery.sticky.min.js"></script>
         <script src="js/home/portfolio.js"></script>
         <script src="js/home/jquery.hoverdir.min.js"></script>
         <script src="js/home/jquery.nav.min.js"></script>
