Removed unused title.

--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
                 </div>
             </a>
             <nav id="navbar" role="navigation">
-                <a class="jump-menu" title="Show navigation">Show navigation</a>
+                <a class="jump-menu"></a>
                 <ul>
                     <li class="current"><a href="#home">home</a></li>
                     <li><a href="#about">about</a></li>
