Updated alert text.

--- a/home.html
+++ b/home.html
@@ -427,8 +427,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="alert-success"><strong>Thank you for contacting me.</strong></div>
-                        <div class="alert-error"><strong>Email was not sent!</strong> It appears that the mailing server is down. Either try again later or email me directly at: <a target='_blank' href='mailto:bhamodi@uwaterloo.ca'>bhamodi@uwaterloo.ca</a></div>
+                        <div class="alert-success"><strong>Email sent!</strong> Thank you for contacting me.</div>
+                        <div class="alert-error"><strong>Email not sent!</strong> It appears that the mailing server is down. Please try again later or email me directly at: <a target='_blank' href='mailto:bhamodi@uwaterloo.ca'>bhamodi@uwaterloo.ca</a></div>
                     </form>
                 </div>
                 <div class="contact">
