Apply green class directly instead of dynamically.

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         <link rel="stylesheet" href="css/home.css">
     </head>
 
-    <body>
+    <body class='green'>
         <div class="preloader">
             <div class="loading">
                 <h3>Loading...</h3>
