Updated copyright text.

--- a/home.html
+++ b/home.html
@@ -439,7 +439,7 @@
                         <li><a class="codecademy" target="_blank" href="http://www.codecademy.com/bhamodi"></a></li>
                         <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/baraahamodi"></a></li>
                     </ul>
-                    <div class="copy-right">2015 © Baraa Hamodi | All rights reserved.</div>
+                    <div class="copy-right">2015 © Baraa Hamodi. All rights reserved.</div>
                 </div>
             </div>
         </footer>
