Ensured double quotes are used for all HTML tags.

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         <link rel="stylesheet" href="css/home.css">
     </head>
 
-    <body class='green'>
+    <body class="green">
         <div class="preloader">
             <div class="loading">
                 <h3>Loading...</h3>
@@ -246,7 +246,7 @@
             <div class="p-title-one p-dark">Ultra Responsive</div>
             <div class="p-title-two">ON BOTH MOBILE & DESKTOP</div>
             <div class="spacer newtr"></div>
-            <div class="mobile-parallax-image hideme-slide2 dontHide"><img src="img/parallax/mobile-parallax-image.png" alt='img'></div>
+            <div class="mobile-parallax-image hideme-slide2 dontHide"><img src="img/parallax/mobile-parallax-image.png" alt="img"></div>
         </article>
 
         <article id="experience" class="content light">
@@ -333,56 +333,56 @@
                     <section id="portfolio-grid" class="clear">
                         <div class="portfolioBase"></div>
                         <div class="portfolio-element element tools backend" id="project-01.html">
-                            <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt='img'>
+                            <img class="portfolio-image" src="img/portfolio/thumb-01.jpg" alt="img">
                             <div>
                                 <span><span class="project-title"></span>Matrix Calculator<span class="project-position">Tool Developer</span></span>
                             </div>
                         </div>
 
                         <div class="portfolio-element element mobile" id="project-02.html">
-                            <img class="portfolio-image" src="img/portfolio/thumb-02.jpg" alt='img'>
+                            <img class="portfolio-image" src="img/portfolio/thumb-02.jpg" alt="img">
                             <div>
                                 <span><span class="project-title"></span>Android Game<span class="project-position">Mobile Game Developer</span></span>
                             </div>
                         </div>
 
                         <div class="portfolio-element element backend hardware" id="project-03.html">
-                            <img class="portfolio-image" src="img/portfolio/thumb-03.jpg" alt='img'>
+                            <img class="portfolio-image" src="img/portfolio/thumb-03.jpg" alt="img">
                             <div>
                                 <span><span class="project-title"></span>Automated Teller Machine<span class="project-position">Embedded Software Developer</span></span>
                             </div>
                         </div>
 
                         <div class="portfolio-element element web mobile" id="project-04.html">
-                            <img class="portfolio-image" src="img/portfolio/thumb-04.jpg" alt='img'>
+                            <img class="portfolio-image" src="img/portfolio/thumb-04.jpg" alt="img">
                             <div>
                                 <span><span class="project-title"></span>Portfolio Website<span class="project-position">Full Stack Web Developer</span></span>
                             </div>
                         </div>
 
                         <div class="portfolio-element element tools backend" id="project-05.html">
-                            <img class="portfolio-image" src="img/portfolio/thumb-05.png" alt='img'>
+                            <img class="portfolio-image" src="img/portfolio/thumb-05.png" alt="img">
                             <div>
                                 <span><span class="project-title"></span>Balance Tracker<span class="project-position">Tool Developer</span></span>
                             </div>
                         </div>
 
                         <div class="portfolio-element element hardware backend" id="project-06.html">
-                            <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt='img'>
+                            <img class="portfolio-image" src="img/portfolio/thumb-06.jpg" alt="img">
                             <div>
                                 <span><span class="project-title"></span>Fuel Cell Car<span class="project-position">Embedded Software Developer</span></span>
                             </div>
                         </div>
 
                         <div class="portfolio-element element tools backend" id="project-07.html">
-                            <img class="portfolio-image" src="img/portfolio/thumb-07.png" alt='img'>
+                            <img class="portfolio-image" src="img/portfolio/thumb-07.png" alt="img">
                             <div>
                                 <span><span class="project-title"></span>Python Auto Clicker<span class="project-position">Tool Developer</span></span>
                             </div>
                         </div>
 
                         <div class="portfolio-element element hardware" id="project-08.html">
-                            <img class="portfolio-image" src="img/portfolio/thumb-08.jpg" alt='img'>
+                            <img class="portfolio-image" src="img/portfolio/thumb-08.jpg" alt="img">
                             <div>
                                 <span><span class="project-title"></span>Electric Cars<span class="project-position">Hardware Design Engineer</span></span>
                             </div>
@@ -394,7 +394,7 @@
             </div>
             <div class="clear"></div>
             <section class="img-spacer">
-                <div class="img-item hideme dontHide"><img src="img/imac.png" alt='img'></div>
+                <div class="img-item hideme dontHide"><img src="img/imac.png" alt="img"></div>
             </section>
         </article>
 
@@ -428,7 +428,7 @@
                             </div>
                         </div>
                         <div class="alert-success"><strong>Email sent!</strong> Thank you for contacting me.</div>
-                        <div class="alert-error"><strong>Email not sent!</strong> It appears that the mailing server is down. Please try again later or email me directly at: <a target='_blank' href='mailto:bhamodi@uwaterloo.ca'>bhamodi@uwaterloo.ca</a></div>
+                        <div class="alert-error"><strong>Email not sent!</strong> It appears that the mailing server is down. Please try again later or email me directly at: <a target="_blank" href="mailto:bhamodi@uwaterloo.ca">bhamodi@uwaterloo.ca</a></div>
                     </form>
                 </div>
                 <div class="contact">
