--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
 
     <!-- Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:700|Cardo' rel='stylesheet'>
+    <link href="http://fonts.googleapis.com/css?family=Montserrat:700|Cardo" rel="stylesheet">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/loader.css"/>
