Update meta descriptions.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Core Meta Data -->
   <meta name="author" content="Baraa Hamodi">
-  <meta name="description" content="A young man with big dreams.">
+  <meta name="description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences and projects here!">
   <meta name="keywords" content="mechatronics,software,engineer,developer,html5,css3,jquery,python,design,java,c++,robotics">
 
   <!-- Open Graph Meta Data -->
@@ -19,7 +19,7 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="http://baraa.ca/img/thumbnail.png">
   <meta property="og:url" content="http://baraa.ca">
-  <meta property="og:description" content="A young man with big dreams.">
+  <meta property="og:description" content="A young man with big dreams. Learn more about Baraa and his different skill sets, work experiences and projects here!">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="icon.png">
