--- a/home.html
+++ b/home.html
@@ -254,6 +254,17 @@
     <div class="spacer"></div>
     <div class="title two">Check out where I've worked!</div>
     <div id="work" class="work-container">
+      <div class="work-exp-right-0 hideme">
+        <div class="work-logo"><img src="img/work/optimizely.png"></div>
+        <div class="work-company"><b>Optimizely Inc.</b></div>
+        <div class="work-position">Software Engineer</div>
+        <div class="work-location">San Francisco, California</div>
+        <div class="work-description">
+          <ul>
+            <li>Working with the mobile team responsible for both the Android and iOS A/B testing platforms.</li>
+          </ul>
+        </div>
+      </div>
       <div class="work-exp-left-1 hideme">
         <div class="work-logo"><img src="img/work/tagged.png"></div>
         <div class="work-company"><b>Tagged Inc.</b></div>
