Renamed about section to skills.

--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
   <section id="home" class="clear">
     <div class="video-mask"></div>
     <a id="video-volume" onclick="$('#background-video').toggleVolume()"></a>
-    <a href="#about"><div class="bouncing-arrow"></div></a>
+    <a href="#skills"><div class="bouncing-arrow"></div></a>
 
     <!-- Video Background -->
     <a id="background-video" class="player" data-property="{videoURL:'kn-1D5z3-Cs',mute:true,showControls:false,showYTLogo:false,realfullscreen:false,gaTrack:false}"></a>
@@ -58,7 +58,7 @@
       </ul>
       <div class="spacer"></div>
       <div class="second-title">Creativity starts with viewing the world differently. Take action & keep it simple.</div>
-      <a href="#about"><div class="continue-button">Find out more<span></span></div></a>
+      <a href="#skills"><div class="continue-button">Find out more<span></span></div></a>
     </div>
   </div>
   <header class="header">
@@ -71,7 +71,7 @@
       <a class="jump-menu"></a>
       <ul>
         <li class="current"><a href="#home">home</a></li>
-        <li><a href="#about">about</a></li>
+        <li><a href="#skills">skills</a></li>
         <li><a href="#facts">facts</a></li>
         <li><a href="#experience">experience</a></li>
         <li><a href="#projects">projects</a></li>
@@ -81,7 +81,7 @@
     <nav class="menu">
       <ul id="nav">
         <li class="current"><a href="#home">home</a></li>
-        <li><a href="#about">about</a></li>
+        <li><a href="#skills">skills</a></li>
         <li><a href="#facts">facts</a></li>
         <li><a href="#experience">experience</a></li>
         <li><a href="#projects">projects</a></li>
@@ -89,7 +89,7 @@
       </ul>
     </nav>
   </header>
-  <article id="about" class="content dark">
+  <article id="skills" class="content dark">
     <header class="title one">My Skills</header>
     <div class="spacer"></div>
     <div class="title two">I take pride in my interdisciplinary approach in crafting beautiful, functional and engaging work that delights and delivers results.</div>
