Various CSS updates.

--- a/project-03.html
+++ b/project-03.html
@@ -1,8 +1,8 @@
 <div class="project-container">
   <div class="clear"></div>
   <div class="project-info">
-    <div class="tag-project">Embedded Software Developer</div>
-    <div class="title-project">Automated Teller Machine</div>
+    <div class="tag-project">EMBEDDED SOFTWARE DEVELOPER</div>
+    <div class="title-project">AUTOMATED TELLER MACHINE</div>
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
