--- a/project-04.html
+++ b/project-04.html
@@ -1,8 +1,8 @@
 <div class="project-container">
   <div class="clear"></div>
   <div class="project-info">
-    <div class="tag-project">Full Stack Web Developer</div>
-    <div class="title-project">Personal Portfolio</div>
+    <div class="tag-project">FULL STACK WEB DEVELOPER</div>
+    <div class="title-project">PERSONAL PORTFOLIO</div>
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
