--- a/project-08.html
+++ b/project-08.html
@@ -1,8 +1,8 @@
 <div class="project-container">
   <div class="clear"></div>
   <div class="project-info">
-    <div class="tag-project">Hardware Design Engineer</div>
-    <div class="title-project">Electric Car</div>
+    <div class="tag-project">HARDWARE DESIGN ENGINEER</div>
+    <div class="title-project">ELECTRIC CAR</div>
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
