--- a/project-01.html
+++ b/project-01.html
@@ -1,8 +1,8 @@
 <div class="project-container">
   <div class="clear"></div>
   <div class="project-info">
-    <div class="tag-project">Tool Developer</div>
-    <div class="title-project">Matrix Calculator</div>
+    <div class="tag-project">TOOL DEVELOPER</div>
+    <div class="title-project">MATRIX CALCULATOR</div>
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
