--- a/project-02.html
+++ b/project-02.html
@@ -1,8 +1,8 @@
 <div class="project-container">
   <div class="clear"></div>
   <div class="project-info">
-    <div class="tag-project">Mobile Game Developer</div>
-    <div class="title-project">Android Game</div>
+    <div class="tag-project">MOBILE GAME DEVELOPER</div>
+    <div class="title-project">ANDROID GAME</div>
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
