--- a/project-05.html
+++ b/project-05.html
@@ -1,8 +1,8 @@
 <div class="project-container">
   <div class="clear"></div>
   <div class="project-info">
-    <div class="tag-project">Tools Developer</div>
-    <div class="title-project">Balance Tracker</div>
+    <div class="tag-project">TOOLS DEVELOPER</div>
+    <div class="title-project">BALANCE TRACKER</div>
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
