Completely removed all instances of text-transform: uppercase

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 <body class="green">
   <div class="preloader">
     <div class="loading">
-      <h3>Loading...</h3>
+      <h3>LOADING...</h3>
       <span class="progress"></span>
     </div>
   </div>
