--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <div class="preloader">
     <div class="loading">
-      <h3>Loading...</h3>
+      <h3>LOADING...</h3>
       <span class="progress"></span>
     </div>
   </div>
@@ -63,7 +63,7 @@
       <li class="layer" data-depth="0.15"><div class="triangles"></div></li>
 
       <!-- Main header -->
-      <li class="layer" data-depth="0.20"><div class="title"><h2>Mechatronics Engineer</h2><span class="line"></span></div></li>
+      <li class="layer" data-depth="0.20"><div class="title"><h2>MECHATRONICS ENGINEER</h2><span class="line"></span></div></li>
       <li class="layer" data-depth="0.30"><div class="main-title"><h1>Baraa Hamodi</h1><p class="sub-title">A young man with big dreams.</p></div></li>
 
       <!-- Flakes -->
@@ -88,7 +88,7 @@
 
       <!-- Contact -->
       <li class="layer" data-depth="0.20">
-        <a href="home" class="button">Click to enter</a>
+        <a href="home" class="button">CLICK TO ENTER</a>
         <div class="contact">
           <ul class="icons">
             <li><a class="github" target="_blank" href="https://github.com/bhamodi"></a></li>
