Corrected spelling mistakes.

--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@
             <div class="details">
               <ul class="feature-list">
                 <li><span class="skill-experience"></span>Embedded Software</li>
-                <li><span class="skill-experience"></span>Tool Developement</li>
+                <li><span class="skill-experience"></span>Tool Development</li>
                 <li><span class="skill-experience"></span>Algorithms and Data Structures</li>
               </ul>
             </div>
@@ -113,9 +113,9 @@
           <div class="tooltip skill-hover">
             <div class="details">
               <ul class="feature-list">
-                <li><span class="skill-experience"></span>Android Developement</li>
-                <li><span class="skill-experience"></span>Tool Developement</li>
-                <li><span class="skill-experience"></span>Cross-platform Game Developement</li>
+                <li><span class="skill-experience"></span>Android Development</li>
+                <li><span class="skill-experience"></span>Tool Development</li>
+                <li><span class="skill-experience"></span>Cross-platform Game Development</li>
               </ul>
             </div>
           </div>
