--- a/project-04.html
+++ b/project-04.html
@@ -6,7 +6,7 @@
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
-      <p>This entire website is a product of this project. I found this project to be really fun as I was able to completely design how I want to represent myself online everything from how my experience is displayed to the syles used. I also took the required steps to make this website fully resonsive so that it adjusts to your screen size. My wesite has nice UI/UX on both desktop and mobile.</p>
+      <p>This entire website is a product of this project. I found this project to be really fun as I was able to completely design how I want to represent myself online everything from how my experience is displayed to the styles used. I also took the required steps to make this website fully responsive so that it adjusts to your screen size. My website has nice UI/UX on both desktop and mobile.</p>
       <h3>Software</h3>
       <p>Languages used include HTML, CSS, JavaScript and PHP. You can find all the source code on my <a href="https://github.com/bhamodi/bhamodi.github.io" target="_blank">GitHub.</a></p>
     </div>
