--- a/project-08.html
+++ b/project-08.html
@@ -8,7 +8,7 @@
       <h3>General Overview</h3>
       <p>This project is one of my most advanced hardware projects due to the fact that my team and I built fully functioning electric cars that are capable of going over 60 km/hr. The size of the team I worked with was around 15 people and I personally lead the hardware design and maintenance team which consisted of 8 members. As one of the leaders in this team, I was responsible for doing some of the core hardware design work as well as mentor the younger members of the team.</p>
       <h3>Hardware Design</h3>
-      <p>The technology we used was AutoCAD (2D-drawings) and Solid Edge (3D-modelling). As a team, we were very successful in the races that we competed in.</p>
+      <p>The technology we used was AutoCAD (2D-drawings) and Solid Edge (3D-modeling). As a team, we were very successful in the races that we competed in.</p>
       <h3>Results</h3>
       <p>At the University of Waterloo Electric Car Challenge, for three consecutive years, we won the Engineering Design Award and managed to finish in the top 2. My team was called Bluevale. You can view the results here:
       <ul>
