Update spacer class name.

--- a/home.html
+++ b/home.html
@@ -245,7 +245,7 @@
   <article class="parallax p-two">
     <div class="p-title-one p-dark">ULTRA RESPONSIVE</div>
     <div class="p-title-two">ON BOTH MOBILE & DESKTOP</div>
-    <div class="spacer newtr"></div>
+    <div class="spacer horizontal-line"></div>
     <div class="mobile-parallax-image hideme-slide2 dontHide"><img src="img/parallax/mobile-parallax-image.png" alt="img"></div>
   </article>
 
