Updated all project descriptions.

--- a/project-01.html
+++ b/project-01.html
@@ -6,11 +6,11 @@
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
-      <p>I started this project towards the end of my 1A term after I had almost completed my Linear Algebra and Digital Computation courses. I combined my knowledge from both of these courses (the matrix operations from Linear Algebra and the C++ knowledge from Digital Computation) to make a very useful matrix calculator that helped me verify my homework answers. It was a nice challenge and real life application after learning so much C++ and algebra over the semester. You can find the C++ code on my <a href="https://github.com/bhamodi/Matrix-Calculator" target="_blank">GitHub.</a></p>
+      <p>I started this project towards the end of my 1A term after I had almost completed my Linear Algebra and Digital Computation courses. I combined my knowledge from both of these courses (the matrix operations from Linear Algebra and the C++ knowledge from Digital Computation) to make a very useful matrix calculator that helped me solve comprehensive matrix operations quickly. It was a nice challenge and real life application after learning so much C++ and algebra over the semester. You can find the C++ code on my <a href="https://github.com/bhamodi/Matrix-Calculator" target="_blank">GitHub.</a></p>
       <h3>Software</h3>
-      <p>The algorithms I used are fairly straightforward and I derived them by myself from my knowledge in Linear Algebra. I still have some matrix functions/operations not coded because the algorithms are overly complex. Some of these complex functions include finding the inverse of a matrix and finding the determinant. I hope to one day establish an efficient algorithm to handle these operations.</p>
+      <p>The algorithms that I used are fairly straightforward and I derived them by myself from my knowledge in Linear Algebra and matrix operations. There are still some matrix operations that are not implemented because of the algorithmic complexity such as inversing a matrix or finding the determinant. I hope to one day implement an efficient algorithm to handle these last few operations.</p>
       <h3>Current Plans</h3>
-      <p>Since I have gained some Android and mobile development experience from my other projects, I revisited this calculator and I am currently in the process of porting it to Android. This will allow me to release a Matrix Calculator application that will help many people around the world with their matrix calculations.</p>
+      <p>Since I have gained some Android and mobile development experience from my other projects, I revisited this calculator and I am currently in the process of porting it to Android. This will allow me to release a Matrix Calculator application that will help people compute their matrix operations.</p>
     </div>
   </div>
 </div>
