--- a/project-08.html
+++ b/project-08.html
@@ -6,11 +6,11 @@
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
-      <p>This project is one of my most advanced hardware projects due to the fact that my team and I built fully functioning electric cars that are capable of going over 60 km/hr. The size of the team I worked with was around 15 people and I personally lead the hardware design and maintenance team which consisted of 8 members. As one of the leaders in this team, I was responsible for doing some of the core hardware design work as well as mentor the younger members of the team.</p>
+      <p>This project is one of my most advanced hardware projects due to the fact that my team and I built fully functioning live-sized electric cars that are capable of going over 60 km/hr. The size of the team I worked with was around 15 people and I personally lead the hardware design and maintenance team which consisted of 8 members. As the leader of the design and maintenance team, I was responsible for doing some of the core hardware design work as well as mentor the younger members of the team.</p>
       <h3>Hardware Design</h3>
-      <p>The technology we used was AutoCAD (2D-drawings) and Solid Edge (3D-modeling). As a team, we were very successful in the races that we competed in.</p>
+      <p>The technology we used was AutoCAD (2D-drawings) and Solid Edge (3D-modeling). We ensured that the designs of the cars were functional, safe and easy to build. Safety and maintenance were very important factors when it came to design while at the same time, we also tried to keep the design as lightweight as possible.</p>
       <h3>Results</h3>
-      <p>At the University of Waterloo Electric Car Challenge, for three consecutive years, we won the Engineering Design Award and managed to finish in the top 2. My team was called Bluevale. You can view the results here:
+      <p>At the University of Waterloo Electric Car Challenge, for three consecutive years, we won the Engineering Design Award. We also managed to finish in the top 2 every year. My team was called Bluevale. You can view the results here:
       <ul>
         <li><a href="https://uwaterloo.ca/sedra-student-design-centre/waterloo-high-school-electric-vehicle-challenge/race-results/2014-race-results" target="_blank">2014 Results</a></li>
         <li><a href="https://uwaterloo.ca/sedra-student-design-centre/results/2013" target="_blank">2013 Results</a></li>
