--- a/project-04.html
+++ b/project-04.html
@@ -6,9 +6,9 @@
     <div class="spacer"></div>
     <div class="description">
       <h3>General Overview</h3>
-      <p>This entire website is a product of this project. I found this project to be really fun as I was able to completely design how I want to represent myself online everything from how my experience is displayed to the styles used. I also took the required steps to make this website fully responsive so that it adjusts to your screen size. My website has nice UI/UX on both desktop and mobile.</p>
+      <p>This entire website is a result of this project. I found this project to be really fun as I was able to completely design every aspect of the website from the group up, no restrictions. I took the required steps to make this website fully responsive so that it adjusts to any screen size. I made sure that my website has a nice UI & UX on both desktop and mobile. I also went through a lot of optimization stages to ensure that the content is easily accessible to the users and that the website loads up as fast as possible.</p>
       <h3>Software</h3>
-      <p>Languages used include HTML, CSS, JavaScript and PHP. You can find all the source code on my <a href="https://github.com/bhamodi/bhamodi.github.io" target="_blank">GitHub.</a></p>
+      <p>I built this website using the following languages: HTML, CSS, JavaScript (including jQuery) and PHP. You can find all the source code for this website on my <a href="https://github.com/bhamodi/bhamodi.github.io" target="_blank">GitHub.</a></p>
     </div>
   </div>
 </div>
